{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 50,
  "lineage": "a199049e-5638-46d9-1e22-71c26decd9ed",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb5115914ccc4bc2",
            "arn": "arn:aws:ec2:us-west-2:801328421558:instance/i-0ac62f06e6ab27f71",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac62f06e6ab27f71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "delete_oregon_anup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d94cf7b114af6a2",
            "private_dns": "ip-12-11-80-18.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.11.80.18",
            "public_ip": "52.89.221.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "name": "aws"
                },
                "throughput": 125,
                "volume_id": "vol-0ea52f5ec6143e88f",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f76d6fe783c4b2d",
            "tags": {
              "Name": "Terraform_instance"
            },
            "tags_all": {
              "Name": "Terraform_instance",
              "name": "aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc42991629e209f3"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.this_sg",
            "module.vpc.aws_subnet.this_subnet_pub",
            "module.vpc.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb5115914ccc4bc2",
            "arn": "arn:aws:ec2:us-west-2:801328421558:instance/i-010af7b146a01ab91",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010af7b146a01ab91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "delete_oregon_anup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040f003ff51fe29a3",
            "private_dns": "ip-12-11-92-87.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.11.92.87",
            "public_ip": "35.90.209.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "name": "aws"
                },
                "throughput": 125,
                "volume_id": "vol-096330bb516ec1dfa",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f76d6fe783c4b2d",
            "tags": {
              "Name": "Terraform_instance"
            },
            "tags_all": {
              "Name": "Terraform_instance",
              "name": "aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc42991629e209f3"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.this_sg",
            "module.vpc.aws_subnet.this_subnet_pub",
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:security-group/sg-0fc42991629e209f3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc42991629e209f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240307114900547900000001",
            "name_prefix": "terraform-",
            "owner_id": "801328421558",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "name": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:route-table/rtb-0a62c2471e46423c7",
            "default_route_table_id": "rtb-0a62c2471e46423c7",
            "id": "rtb-0a62c2471e46423c7",
            "owner_id": "801328421558",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfda867eedf63330",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default",
              "name": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this_igw",
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:internet-gateway/igw-0dfda867eedf63330",
            "id": "igw-0dfda867eedf63330",
            "owner_id": "801328421558",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw",
              "name": "aws"
            },
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_rw_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088ecb86c67a9e79b",
            "route_table_id": "rtb-0a62c2471e46423c7",
            "subnet_id": "subnet-04f76d6fe783c4b2d"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.example",
            "module.vpc.aws_internet_gateway.this_igw",
            "module.vpc.aws_subnet.this_subnet_pub",
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_subnet_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:subnet/subnet-0f4ccaa1f82dadb6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "12.11.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ccaa1f82dadb6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801328421558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_subnet1"
            },
            "tags_all": {
              "Name": "pri_subnet1",
              "name": "aws"
            },
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_subnet_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:subnet/subnet-08b15cd0e84e1807f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "12.11.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b15cd0e84e1807f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801328421558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_subnet2"
            },
            "tags_all": {
              "Name": "pri_subnet2",
              "name": "aws"
            },
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_subnet_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:subnet/subnet-04f76d6fe783c4b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "12.11.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f76d6fe783c4b2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801328421558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet"
            },
            "tags_all": {
              "Name": "pub_subnet",
              "name": "aws"
            },
            "vpc_id": "vpc-0118237f1a5c8d81b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:801328421558:vpc/vpc-0118237f1a5c8d81b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.11.0.0/16",
            "default_network_acl_id": "acl-04d04c4c20b3ab255",
            "default_route_table_id": "rtb-0a62c2471e46423c7",
            "default_security_group_id": "sg-0816c34d05535df02",
            "dhcp_options_id": "dopt-0bcd29662c1bd60d1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0118237f1a5c8d81b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a62c2471e46423c7",
            "owner_id": "801328421558",
            "tags": {
              "Name": "this_vpc"
            },
            "tags_all": {
              "Name": "this_vpc",
              "name": "aws"
            }
          }
        }
      ]
    }
  ]
}